--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Segoe UI Historic", "Segoe UI", Inter, system-ui, Avenir,
+    Helvetica, Arial, sans-serif;
   background-color: #f4f4f5;
 }
-
