--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  font-family: "Segoe UI Historic", "Segoe UI", Inter, system-ui, Avenir,
-    Helvetica, Arial, sans-serif;
+  font-family: "Segoe UI", Inter, system-ui, Avenir, Helvetica, Arial,
+    sans-serif;
   background-color: #f4f4f5;
 }
