--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,18 @@
   background-color: #f4f4f5;
 }
 
+#recording {
+  animation: recording 1s ease-in-out infinite;
+}
+
+@keyframes recording {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
